// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new/local/app/server/handleAppListen should log (isProduction false) 1`] = `
Array [
  Array [
    "console.log",
    Array [
      "Node dev server: listening on port 'PORT'",
    ],
  ],
]
`;

exports[`new/local/app/server/handleAppListen should log (isProduction true) 1`] = `
Array [
  Array [
    "console.log",
    Array [
      "Node cluster worker 'process.pid': listening on port 'PORT'",
    ],
  ],
]
`;
